NEDS-109: Add experimental support for clustering
* Make it possible to configure clustering when starting Harmony AP
  container
* Better compatibility with Azure Files SMB shares